--- a/FlashCardAp/app/src/main/res/layout/activity_main.xml
+++ b/FlashCardAp/app/src/main/res/layout/activity_main.xml
@@ -66,6 +66,8 @@
         android:background="@drawable/options_background"
         />
 
+
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -78,6 +80,14 @@
             android:layout_height="40dp"
             android:src="@drawable/ic_hide_eye"
             android:layout_centerInParent="true"/>
+        <ImageView
+            android:id="@+id/arrow"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_margin="15dp"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/ic_arrow"
+            />
 
         <ImageView
             android:id="@+id/showIcon"
